@@ -2,6 +2,10 @@ Changes with Apache 2.1.3
 
   [Remove entries to the current 2.0 section below, when backported]
 
+  *) core: Add support for APR_TCP_DEFER_ACCEPT to defer accepting
+     of a connection until data is available.
+     [Paul Querna]
+
   *) conf: Remove AddDefaultCharset from the default configuration because
      setting a site-wide default does more harm than good. PR 23421.
      [Roy Fielding]
